2023-12-aks-argocd-pipeline/Application/app-01/deployment/overlays/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-01
  name: app-01
spec:
  template:
    spec:
      containers:
        - name: app-01
