2023-12-aks-argocd-pipeline/Application/app-01/deployment/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-01
spec:
  rules:
    - host: app-01.mycompany.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-01
                port:
                  number: 80
